--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,10 @@
 /* основной цвет текста #757575 */
 /* вторичный цыет текста #212121; */
-
 /* белый #FFFFFF; */
-
 /*текст футера rgba(255, 255, 255, 0.6); */
-
 /* цвет текста логотипа #000000; #2196F3; */
-/* акцент #2196F3; */
 /* фон футера #2F303A */
-/* вторичный цвет фона #F5F4FA */
+
 
 :root {
   --primery-tex-color: #757575;
@@ -22,43 +18,125 @@
   --bg-button-color: #188ce8;
   --bg-prbutton-color: #f5f4fa;
   --footer-tx-color: rgba(255, 255, 255, 0.6);
+
+  --card-set-gap: 30px;
+  --section-padding: 94px;
 }
 
 body {
   color: var(--primery-tex-color);
   background-color: #ffffff;
 
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
+
   letter-spacing: 0.03em;
 }
 
-/* Logo */
+/*------------------- Утилиты -----------------------*/
 
-.logo,
-.link,
-.link.current {
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.list {
+  padding: 0;
+  margin: 0;
+
+  list-style: none;
+}
+
+.link {
+  display: block;
+
   text-decoration: none;
 }
 
-.logo {
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.button-primary {
+  padding: 0%;
+}
+
+.feature-title {
+  margin-top: 0;
+}
+/* ----------------Container------------------------- */
+
+.container {
+  width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  /* outline: 2px solid tomato; */
+}
+
+/* -----------------Header----------------- */
+
+.bline {
+  border-bottom: 1px solid #ececec;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+/* ------------------Logo------------------ */
+
+.logo-link {
+  padding-top: 24px;
+  padding-bottom: 25px;
+
   color: var(--logo-color);
+
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  text-decoration: none;
 }
 
 .logo-web {
   color: var(--accent-color);
 }
 
-/* Site nav */
+/* ----------------Site nav-------------------------- */
 .site-nav {
-  list-style: none;
+  display: flex;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+
+.site-nav.list {
+  margin-left: 93px;
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts .item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .site-nav .link {
@@ -74,9 +152,12 @@ body {
   color: var(--accent-color);
 }
 
-/* Contacts */
+/*------------------------ Contacts--------------------- */
 .contacts {
-  list-style: none;
+  display: flex;
+  height: 16px;
+  margin-left: 331px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -92,130 +173,276 @@ body {
   color: var(--accent-color);
 }
 
-/* INDEX */
+/*--------------------- INDEX ----------------------*/
+/* ---------------------Hero --------------------- */
 
-/* Hero */
+.hero.section {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
 .hero {
   background-color: var(--primery-bg-color);
+
+  text-align: center;
+
+  /* outline: 2px solid tomato; */
+}
+
+.hero.container {
+  /* outline: 2px solid tomato; */
 }
 
 .hero-title {
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: var(--card-set-gap);
+  width: 696px;
+
   color: var(--white-color);
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  /* outline: 2px solid tomato; */
 }
 
-/* Button */
+/* ---------------------Button ---------------------*/
+
 .button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+  /* border: 1px solid var(--logo-color); */
+  border: 0;
+  border-radius: 4px;
+
   color: var(--white-color);
   background-color: var(--accent-color);
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+
   cursor: pointer;
 }
 
-.button.primary {
+.button-primary {
+  border: 0;
+  border-radius: 4px;
+  padding: 6px 22px;
+
   background-color: var(--bg-prbutton-color);
   color: var(--title-text-color);
+
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
+  letter-spacing: 0.03em;
+
   cursor: pointer;
 }
 
-.button.primary:hover,
-.button.primary:focus {
+.button-primary:hover,
+.button-primary:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button:hover,
 .button:focus {
   background-color: var(--bg-button-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/* Features */
-.features {
-  list-style: none;
-  font-size: 14px;
-  line-height: 1.7;
+/*---------------------- Features --------------------*/
+
+.section-title {
+  margin-top: 0;
+}
+
+.features.section {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 
 .feature-title {
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
 
-/* Work */
+.features {
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+.features.list {
+  display: flex;
+  /* outline: 2px solid tomato; */
+}
+
+.feature.item:not(:last-child) {
+  margin-right: var(--card-set-gap);
+}
+
+.feature-content {
+  margin: 0;
+}
+
+/*--------------------- Work --------------------------*/
+
+.work.section {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
 .work-title {
+  display: block;
+  width: 376px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+
+  /* outline: 2px solid tomato; */
 }
 
-/* Team */
+.work.list {
+  display: flex;
+}
+
+.work.item:not(:last-child) {
+  margin-right: var(--card-set-gap);
+}
+
+/*----------------------- Team-------------------------- */
+
+.team.section {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
 .team {
   background-color: var(--secondary-bg-color);
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
-.team-title {
+
+.main-team.title {
+  display: block;
+  width: 264px;
+  margin-top: 0;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  /* outline: 2px solid tomato; */
 }
 
-.team .list-title {
+.team-title {
+  margin-bottom: 10px;
+  margin-top: 0;
+  padding-top: var(--card-set-gap);
+
   color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19px;
   text-align: center;
 }
 
-/* List */
-.list {
-  list-style: none;
+.team.list {
+  display: flex;
 }
 
-/* Footer */
+.team-content {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: var(--card-set-gap);
+}
+
+.team.item:not(:last-child) {
+  margin-right: var(--card-set-gap);
+}
+
+.team.item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+/*------------------------ Footer ----------------*/
+.footer.container {
+  padding-top: 0;
+  padding-bottom: 0;
+  /* outline: 2px solid tomato; */
+}
+
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: var(--primery-bg-color);
+
+  /* outline: 2px solid tomato; */
 }
 
-.footer .list {
+.footer.list {
+  padding-top: 0;
+  padding-bottom: 0;
+  /* height: 81px; */
+
   font-style: normal;
+  /* outline: 2px solid tomato; */
 }
 
-.footer-logo {
+.footer.logo {
+  display: block;
+  margin-bottom: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
+
   color: var(--white-color);
+
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  /* outline: 2px solid tomato; */
 }
 .address,
-.footer-link,
-.footer-logo {
+.footer.logo {
   text-decoration: none;
 }
 
@@ -223,7 +450,11 @@ body {
   color: var(--white-color);
 }
 
-.footer-link {
+.footer.link {
+  padding-top: 0;
+  padding-bottom: 0;
+  text-decoration: none;
+
   color: var(--footer-tx-color);
 }
 
@@ -232,22 +463,86 @@ body {
   color: var(--accent-color);
 }
 
-.footer-link:hover,
-.footer-link:focus {
+.footer.link:hover,
+.footer.link:focus {
   color: var(--accent-color);
 }
 
-/* PORTFOLIO */
-.inventory {
-  color: var(--primery-tex-color);
-  font-size: 16px;
-  line-height: 1.9;
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+/*--------------------- PORTFOLIO----------------------*/
+
+/* -----------------Filtr---------------- */
+
+.portfolio {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  /* outline: 2px solid tomato; */
+}
+
+.portfolio.container {
+  padding-top: 0;
+  padding-bottom: 0;
+
+  /* outline: 2px solid tomato; */
 }
 
 .portfolio-title {
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+}
+
+.filtr.list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+
+  /* outline: 2px solid tomato; */
+}
+
+.filtr.item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.exampl.list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: calc(100% / 3-30px);
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
+}
+
+.exampl-item {
+  margin-top: var(--card-set-gap);
+  margin-left: var(--card-set-gap);
+
+  /* outline: 2px solid tomato; */
+}
+
+.exampl-content {
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.portfolio-title {
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.inventory {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  color: var(--primery-tex-color);
+
+  font-size: 16px;
+  line-height: 1.9;
 }
